<resources>
    <string name="app_name">Boost Gym</string>
    <string name="user_profile"> User Profile</string>
    <string name="past_workout">Past Workout</string>
    <string name="gym_location">Gym Location</string>
    <string name="work_out_sessions">Work out sessions</string>
    <string name="gym_instructors">Gym Instructors</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="you_dont_have_an_account">You Dont Have an account</string>
    <string name="email">Email</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="preferred_workout_location">Preferred workout location</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target weight</string>
    <string name="continue_on">Continue On</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="date_of_birth">Date Of birth</string>
    <string name="preferred_workout">Preferred Workout</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="username">Username</string>
    <string name="log_out">Log out</string>
    <string name="appbar_scrolling_view_behaviour">scrolling_app_bar</string>
    <string name="preffered_workout">preffered Workout</string>
    <string name="preferred_workout_place">Preferred Workout Place</string>
</resources>
