<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountCreationActivity"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logo" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/RadioButton1"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:hint="@string/male"/>

       <RadioButton
           android:id="@+id/RadioButton2"
           android:layout_width="100dp"
           android:layout_height="90dp"
           android:hint="@string/female"/>

   </RadioGroup>


    <EditText
        android:id="@+id/Height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/height"/>
    <EditText
        android:id="@+id/Weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/weight"/>
    <EditText
        android:id="@+id/DateofBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/date_of_birth"/>
    <EditText
        android:id="@+id/Prefferedworkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/preferred_workout_place"/>
    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wiseman"
        android:hint="@string/create_account" />
    <ProgressBar
        android:id="@+id/RegisterProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>
