<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserprofileActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/steel">

    <android.support.v7.widget.CardView
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="60dp"
                android:background="@drawable/circlebackgroundpurple"
                android:padding="10dp"
                android:src="@drawable/ic_person_black_24dp" />
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <EditText
        android:id="@+id/txtname"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@android:color/white"
        android:padding="10sp"
        android:layout_marginBottom="5dp"/>


    <EditText
        android:id="@+id/preferredworkout"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/preferred_workout_location"
        android:background="@android:color/white"
        android:padding="10sp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:background="@android:color/white"
        android:padding="10sp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/gender"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:background="@android:color/white"
        android:padding="10sp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:background="@android:color/white"
        android:padding="10sp"
        android:layout_marginBottom="5dp"/>
    <EditText
        android:id="@+id/targetweight"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/target_weight"
        android:background="@android:color/white"
        android:padding="10sp"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/wiseman"
            android:hint="@string/edit" />

        <Button
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorIndigo"
            android:hint="@string/save" />

    </LinearLayout>



</LinearLayout>
