<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".HomeActivity"
    android:background="@drawable/lifting"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/user_profile"
            android:backgroundTint="@color/wiseman"
            android:drawableLeft="@drawable/ic_person_black_24dp"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/past_workout"
            android:backgroundTint="@color/wiseman"
            android:drawableLeft="@drawable/ic_accessibility_black_24dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/gym_location"
            android:backgroundTint="@color/wiseman"
            android:drawableLeft="@drawable/ic_add_location_black_24dp"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/gym_instructors"
            android:drawableLeft="@drawable/gym_instructor"
            android:backgroundTint="@color/wiseman"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="@color/wiseman"
            android:drawableLeft="@drawable/workout_session"
            android:text="@string/work_out_sessions" />
        <TextView
            android:id="@+id/text_view"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>
